@@ -1,5 +1,6 @@
 FOF 3.0.9
 ================================================================================
++ Improved detection and removal of duplicate update sites
 + Reset the APC cache, if enabled, before installing/updating an extension using an InstallScript script class.
 # [HIGH] Params won't work properly with Conservative caching
 
